src/test/compile-fail/attr-bad-meta.rs
./src/test/compile-fail/attr-bad-meta.rs:5:6:5:7: [1;31merror:[0m expecting ], found *
./src/test/compile-fail/attr-bad-meta.rs:5 #[attr*]
                                                 ^
rt: ---
rt: f00e:main:main:                   upcall fail 'explicit failure', src/comp/syntax/parse/parser.rs:112
rt: f00e:main:                        domain main @0xa6bf04c root task failed
